--- a/app/colaborador/list.html
+++ b/app/colaborador/list.html
@@ -1,4 +1,5 @@
-<button class="btn btn-primary mb-3 pull-right" data-toggle="modal" data-target="#exampleModal2">Adicionar Colaborador</button>
+<button class="btn btn-primary mb-3 pull-right" data-toggle="modal" data-target="#exampleModal2">Adicionar
+    Colaborador</button>
 <br><br>
 <div class="box-body">
     <table class="table">
@@ -6,25 +7,34 @@
             <tr>
                 CPF
             </tr>
-
+            
         </thead>
-        <br/>
-        <br/>
+        <br />
+        <br />
         <tbody>
             <tr ng-repeat="colaborador in $ctrl.colaboradores | filter: criteria ">
                 <td>{{:: colaborador.cpf }}</td>
+                <td>{{:: colaborador.pin }}</td>
                 <td style="width:230px;">
-                    <button class="btn btn-outline-primary  pull-right" data-toggle="modal" data-target="#exampleModa2">Ponto</button>
-                    <button class="btn btn-warning" ng-click="$ctrl.showTabUpdate(colaborador) "><i class="fa fa-pencil"></i></button> <button class="btn btn-danger" ng-click="$ctrl.deleteColaborador(colaborador) "><i class="fa fa-trash-o"></i></button></td>
-            </tr>{{$ctrl.criteria}}</tbody>
+                    <button class="btn btn-outline-primary  pull-right" data-toggle="modal"
+                        data-target="#exampleModa2">Ponto</button>
+                    <button class="btn btn-warning" ng-click="$ctrl.showTabUpdate(colaborador) "><i
+                            class="fa fa-pencil"></i></button> <button class="btn btn-danger"
+                        ng-click="$ctrl.deleteColaborador(colaborador) "><i class="fa fa-trash-o"></i></button></td>
+            </tr>
+        </tbody>
     </table>
 </div>
 <!------------------------    MODAL CADASTRAR  --------------------------->
-<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h6 class="modal-title fs-title" id="exampleModalLabel">Cadastrar Colaborador</h6><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+                <h6 class="modal-title fs-title" id="exampleModalLabel">Cadastrar Colaborador</h6><button type="button"
+                    class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+            </div>
             <div class="modal-body">
                 <form id="msform">
                     <!-- progressbar -->
@@ -35,7 +45,8 @@
 
                     </ul>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <!-- fieldsets -->
                     <fieldset>
@@ -44,28 +55,49 @@
                                 <div class="col-7">
                                     <h6 class="fs-title">Dados Colaborador</h6>
                                 </div>
-                            </div><input ng-model="$ctrl.colaborador.nome" type="text" class="form-control" placeholder="Nome Completo"> <input ng-model="$ctrl.colaborador.cpf" type="text" class="form-control" placeholder="CPF"> <input ng-model="$ctrl.colaborador.pis"
-                                type="text" class="form-control" placeholder="PIS"> <input ng-model="$ctrl.colaborador.ctps" type="text" class="form-control" placeholder="Numero CTPS"></div><input type="button" name="next" class="next action-button" value="Próximo"></fieldset>
+                            </div>
+                            <input ng-show="false" ng-model="$ctrl.colaborador.empresa" type="text" class="form-control"
+                                placeholder="Id">
+                            <input ng-model="$ctrl.colaborador.nome" type="text" class="form-control"
+                                placeholder="Nome Completo"> <input ng-model="$ctrl.colaborador.cpf" type="text"
+                                class="form-control" placeholder="CPF"> <input ng-model="$ctrl.colaborador.pis"
+                                type="text" class="form-control" placeholder="PIS"> <input
+                                ng-model="$ctrl.colaborador.ctps" type="text" class="form-control"
+                                placeholder="Numero CTPS">
+                        </div><input type="button" name="next" class="next action-button" value="Próximo">
+                    </fieldset>
                     <fieldset>
                         <div class="form-card">
                             <div class="row">
                                 <div class="col-7">
-                                    <h6 class="fs-title">Localização:</h6>
+                                    <h6 class="fs-title">Dados da Empresa:</h6>
                                 </div>
-                            </div><input ng-model="$ctrl.colaborador.matricula" type="text" class="form-control" placeholder="Matricula"> <input ng-model="$ctrl.colaborador.admissao" type="text" class="form-control" placeholder="Admissão"> <input ng-model="$ctrl.colaborador.horario"
-                                type="text" class="form-control" placeholder="Horário"> <input ng-model="$ctrl.colaborador.setor " type="text" class="form-control" placeholder="Setor"></div><input type="button" name="next" class="next action-button" value="Próximo">                        <input type="button" name="previous" class="previous action-button-previous" value="Voltar"></fieldset>
+                            </div><input ng-model="$ctrl.colaborador.matricula" type="text" class="form-control"
+                                placeholder="Matricula"> <input ng-model="$ctrl.colaborador.admissao" type="text"
+                                class="form-control" placeholder="Admissão"> 
+                                 <input
+                                ng-model="$ctrl.colaborador.setor " type="text" class="form-control"
+                                placeholder="Setor">
+                        </div><input type="button" name="next" class="next action-button" value="Próximo"> <input
+                            type="button" name="previous" class="previous action-button-previous" value="Voltar">
+                    </fieldset>
                     <fieldset>
                         <div class="form-card">
                             <div class="row">
                                 <div class="col-7">
                                     <h6 class="fs-title">Contatos</h6>
                                 </div>
-                            </div><input type="email" name="fname" placeholder="Email"> <input type="tel" name="fname" placeholder="Telefone"> <input type="text" name="lname" placeholder="Responsavel"></div>
+                            </div><input ng-model="$ctrl.colaborador.email " type="email" name="email" placeholder="Email"> 
+                            <input ng-model="$ctrl.colaborador.telefone" type="text" name="tel"
+                                placeholder="Telefone"> 
+                                <input ng-model="$ctrl.colaborador.celular" type="text" name="lname" placeholder="Celular">
+                        </div>
 
 
 
 
-                        <button class="action-button-previouss" ng-click="$ctrl.createColaborador()" ng-if="$ctrl.tabCreate">Incluir</button>
+                        <button data-dismiss="modal" class="action-button-previouss" ng-click="$ctrl.createColaborador()"
+                            ng-if="$ctrl.tabCreate">Incluir</button>
 
                         <input type="button" name="previous" class="previous action-button-previous" value="Voltar">
 
@@ -79,14 +111,15 @@
 </div>
 <!----------------------         modal ver mais   -------------------------->
 
-<div class="modal fade  " id="exampleModa2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade  " id="exampleModa2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Folha de Ponto</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
 
 
