Conclusão da Funcionalidade de Relatório do Ponto

--- a/public/funcionario/list.html
+++ b/public/funcionario/list.html
@@ -79,6 +79,11 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Folha de Ponto</h5><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+            </div>
+            <div class="form-group input-group">
+                02  <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                03  <input name="consulta" id="txt_consulta" placeholder="Consultar" type="text" class="form-control">
+                04 </div>
             <table class="table table-hover">
                 <thead class="thead-dark">
                     <tr>
