Melhorias e teste final

--- a/app/colaborador/tabs.html
+++ b/app/colaborador/tabs.html
@@ -16,7 +16,8 @@
                                     <th>CPF</th>
                                     <th>Setor</th>
                                     <th>Telefone</th>
-                                    <th>Pis</th>
+                                    <th>Pin</th>
+                                    <th>Email</th>
                                     <th>Ações</th>
                                 </tr>
                             </thead>
@@ -26,7 +27,8 @@
                                     <td>{{colaborador.cpf}}</td>
                                     <td>{{colaborador.setor}}</td>
                                     <td>{{colaborador.telefone}}</td>
-                                    <td>{{colaborador.pis}}</td>
+                                    <td>{{colaborador.pin}}</td>
+                                    <td>{{colaborador.email}}</td>
                                     <td style="width:230px;">
                                         <button ng-click="$ctrl.getHorasTrabalhadas(colaborador._id)"
                                             class="btn btn-outline-primary  pull-right" data-toggle="modal"
