--- a/app/colaborador/tabs.html
+++ b/app/colaborador/tabs.html
@@ -117,7 +117,7 @@
 
 
                             <button data-dismiss="modal" class="action-button-previouss"
-                                ng-click="$ctrl.createColaborador()" ng-if="$ctrl.tabCreate">Incluir</button>
+                                ng-click="$ctrl.createColaborador()">Incluir</button>
 
                             <input type="button" name="previous" class="previous action-button-previous" value="Voltar">
 
