--- a/app/colaborador/tabs.html
+++ b/app/colaborador/tabs.html
@@ -116,7 +116,7 @@
 
 
 
-                            <button data-dismiss="modal" class="action-button-previouss"
+                            <button data-dismiss="modal" class="action-button-previous"
                                 ng-click="$ctrl.createColaborador()">Incluir</button>
 
                             <input type="button" name="previous" class="previous action-button-previous" value="Voltar">
